fix(Sophia): Ajeitar requisicoes para funcionarem
